adjusted some code

--- a/themes/hugo-paper-amended/layouts/_default/single.html
+++ b/themes/hugo-paper-amended/layouts/_default/single.html
@@ -10,7 +10,7 @@
       {{- .Date.Format "2.1.2006 " -}} ·
       <a
       target="_blank"
-      href="https://twitter.com/intent/tweet?text={{ .Title }}%20{{ .Permalink }}%20by%20@imnatalienguyen
+      href="https://twitter.com/intent/tweet?text={{ .Title }}%20{{ .Permalink }}%20by%20@imnatalienguyen"
       > tweet </a> 🐦
       {{ end }}
     </p>
@@ -25,7 +25,5 @@
     </ul>
     {{ end }}
   </footer>
-  {{ end }}
-  {{ end }}
 </article>
 {{ partial "footer.html" . }}
