--- a/themes/hugo-paper-amended/layouts/partials/footer.html
+++ b/themes/hugo-paper-amended/layouts/partials/footer.html
@@ -8,7 +8,7 @@
   <span>&middot;</span>
   <span>Powered by <a href="https://gohugo.io/" target="_blank">Hugo️️</a> 🔮</span>
   <span>&middot;</span>
-  <span>Designed by <a href="https://github.com/nanxiaobei/hugo-paper/" target="_blank">nanxiaobei</a>️ 🎉</span>
+  <span>Designed by <a href="https://21beats/" target="_blank">21beats</a>️ 🎉</span>
 </footer>
 <script src="https://cdn.bootcss.com/instantclick/3.0.1/instantclick.min.js" data-no-instant></script>
 <script data-no-instant>InstantClick.init();</script>
